1-5終わりました

--- a/01/prac1-5.html
+++ b/01/prac1-5.html
@@ -11,10 +11,10 @@
     <script>
         function runButtonPressed() {
             var numbers = [];
-            //prac1-5〜 1から10までの数を順に10個挿入する
-            show(numbers);
             //prac1-5 全ての要素に10を足す
-            //prac1-6 全ての要素に10をかける
+            for (var i = 1; i <= 20; i++) {
+                numbers.push(i + 10);
+            }
             show(numbers);
         }
     </script>
