1-7終わりました

--- a/01/prac1-7.html
+++ b/01/prac1-7.html
@@ -14,11 +14,9 @@
             //prac1-7 1からNまでの数を順にN個挿入する関数を作る
             //関数名：createSequentialNumbers(array, n)
             //できたら，関数定義をaandd.jsに移す
-            //prac1-8 N個の乱数を挿入する関数を作る
-            //関数名：createRandomNumbers(array, n)
-            //できたら，関数定義をaandd.jsに移す
-            show(numbers);
+            createSequentialNumbers(numbers, 15);
         }
+        
     </script>
 
 </head>
