--- a/02/prac2-1.html
+++ b/02/prac2-1.html
@@ -11,9 +11,23 @@
     <script>
         function runButtonPressed() {
             //prac2-1 10個の順数（１，２，３．．．の数列）を生成し，２番目と４番目を入れ替える
+            //prac2-3 prac2-2を20回繰り返す（シャッフルプログラムの完成）
+            var numbers = [];
+            createSequentialNumbers(numbers, 10);
+            var tmp = numbers[1];
+            numbers[1] = numbers[3];
+            numbers[3] = tmp;
+            show(numbers);
             //prac2-2 10個の順数を生成し，n番目とm番目を入れ替える
             //(nとmは乱数にて決定する)
-            //prac2-3 prac2-2を20回繰り返す（シャッフルプログラムの完成）
+            for (let i = 0; i < 20; i++) {
+                var n = Math.floor(Math.random() * 10)
+                var m = Math.floor(Math.random() * 10)
+                var tmp = numbers[n];
+                numbers[n] = numbers[m];
+                numbers[m] = tmp;
+                show(numbers);
+            }
         }
     </script>
 
