--- a/03/prac3-1.html
+++ b/03/prac3-1.html
@@ -10,10 +10,35 @@
 
     <script>
         function runButtonPressed() {
+            var numbers = [];
+            createSequentialNumbers(numbers, 10);
             //prac3-1 10個の乱数の合計を求める（繰り返しで）
+            var sum = 0;
+            for (let i = 0; i < 10; i++) {
+                sum += numbers[i];
+            }
+            show(sum);
             //prac3-2 10個の乱数の平均を求める
+            var average = sum / numbers.length;
+            show(average);
             //prac3-3 10個の乱数の最大値を求める
+            var ran_numbers = [];
+            createRandomNumbers(ran_numbers, 10);
+            var max = 0;
+            for (let i = 0; i < 10; i++) {
+                if (max <= ran_numbers[i]) {
+                    max = ran_numbers[i];
+                }
+            }
+            show(max);
             //prac3-4 10個の乱数の最小値を求める
+            var min = max;
+            for (let i = 0; i < 10; i++) {
+                if (min >= ran_numbers[i]) {
+                    min = ran_numbers[i];
+                }
+            }
+            show(min);
         }
     </script>
 
