--- a/04templates/template4-3.html
+++ b/04templates/template4-3.html
@@ -13,47 +13,76 @@
             var numbers = [];
             createOrderedRandomNumbers(numbers, 20);
             show(numbers);
-        }
-
-        //この関数を，aaandd.jsに加えてください．
-        function createOrderedRandomNumbers(numbers, n) {
-            var count = 0;
-            for (var i = 1; ; i++) {
-                if (Math.floor(Math.random() * 3) == 0) {
-                    numbers.push(i);
-                    count++;
-                    if (count >= n) {
-                        break;
-                    }
+            // prac4-3
+            var judge_num = 10;
+            for (var i = 0; i <= numbers.length; i++) {
+                if (judge_num === numbers[i]) {
+                    show(i);
+                    break;
+                } else if (i === numbers.length) {
+                    show('見つかりませんでした');
                 }
             }
+            // prac4-4
+            var lower = 0;
+            var upper = numbers.length - 1;
+            // console.log(numbers.length);
+            var half;
+            // console.log(upper);
+            // console.log(half);
+            // console.log(numbers[half]);
+            for (; ;) {
+                half = Math.floor((lower + upper) / 2);
+                if (judge_num == numbers[half]) {
+                    show(half);
+                    break;
+                } else if (judge_num < numbers[half]) {
+                    upper = half;
+                    console.log('upper==' + upper);
+                } else if (judge_num > numbers[half]) {
+                    lower = half;
+                    console.log('lower==' + lower);
+                }
+                if (lower == upper - 1) {
+                    show('見つかりませんでした')
+                    break;
+                }
+            }
+
+            // for (var j = 0; j <= Math.floor((numbers.length) / 2); j++) {
+            //     console.log(Math.floor((numbers.length) / 2));
+            //     var double = Math.floor((numbers.length) / 2); //中心の番地
+            //     console.log(judge_num);
+            //     console.log(numbers[double]); //中心の数値
+            //     if (judge_num === numbers[double]) {
+            //         show(double);
+            //         // console.log(numbers[double]);
+            //         // console.log(judge_num);
+            //         break;
+            //     } else if (judge_num < numbers[double]) {
+            //         // numbers.slice(0, Math.floor((numbers.length) / 2));
+            //         numbers.slice(0, double);
+            //         // console.log(Math.floor(numbers[numbers.length / 2]))
+            //         show(numbers);
+            //     } else if (judge_num > numbers[double]) {
+            //         // numbers.slice(Math.floor((numbers.length) / 2) + 1);
+            //         numbers.slice(double + 1);
+            //         show(numbers);
+            //     } else if (j === Math.floor((numbers.length) / 2)) {
+            //         show('見つかりませんでした。')
+            //     }
+            // }
+
         }
 
-        //配列以外の変数を表示するために，aaandd.jsの中身を新しいshowに置き換えてください．
-        function show(obj) {
-            if (Array.isArray(obj)) {
-                var html = '';
-                html = html + '<table border="1">';
-                html = html + '<tr>';
-                for (var i = 0; i < obj.length; i++) {
-                    html = html + '<td>' + obj[i] + '</td>';
-                }
-                html = html + '</tr>';
-                html = html + '</table>';
-                //html = html + '<br>';
-                document.getElementById('res').insertAdjacentHTML('beforeend', html);
-            } else {
-                var string = JSON.stringify(obj);
-                string = string + '<br>';
-                document.getElementById('res').insertAdjacentHTML('beforeend', string);
-            }
-        }
+
+
     </script>
 
 </head>
 
 <body>
-    <h1>ex3-1</h1>
+    <h1>ex4-1</h1>
     <button onclick="runButtonPressed()">run!</button>
     <p id="res"></p>
 </body>
